<fix>: UI contrast issues fixed

--- a/frontend/src/app/pages/BasicCalendar/BasicCalendar.css
+++ b/frontend/src/app/pages/BasicCalendar/BasicCalendar.css
@@ -29,6 +29,10 @@
     padding: 10px 30px; /* Adjust padding */
 }
 
+.rbc-active{
+    color: black !important;
+}
+
 
 .rbc-off-range-bg {
     background-color: rgba(200, 200, 200, 0.5); /* Light gray */
